Add Amazon S3 module to the portal

--- a/src/main/resources/templates/portal.html
+++ b/src/main/resources/templates/portal.html
@@ -84,6 +84,15 @@
             </h3>
             <p>Manage users, roles and permissions</p>
         </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+            <a href="/amazonS3" target="_blank">
+                <img class="rounded-circle img-fluid d-block mx-auto" src="/img/amazon-S3.png" alt="user mgmt"/>
+            </a>
+            <h3>
+                Amazon S3
+            </h3>
+            <p>Simple Cloud Storage Service‎ from Amazon</p>
+        </div>
     </div>
 
     <div class="row">
